--- a/Example/PostFilters/GrayFilterTest.html
+++ b/Example/PostFilters/GrayFilterTest.html
@@ -14,12 +14,16 @@
             width: 50px;
         }
     </style>
+    <link rel="stylesheet" type="text/css" href="../Assets/Htmls/Css/Base.css"/>
+    <script src="../Assets/Htmls/Js/Infos.js"></script>
 </head>
 <body>
 <div style="width: 100%;height: 100%;position:fixed;left: 0px;top: 0px;">
     <canvas id="canvas" tabindex="0" width="400" height="300" style="border: none;margin: 0px;padding: 0px;"></canvas>
 </div>
 <script type="module">
+    addInfos('GrayFilter', '该案例演示了基础的灰度过滤器,确保页面获取焦点(鼠标点击该页面)后,按下键盘J键关闭灰度过滤器,按下键盘I键开启灰度过滤器!');
+
     import Scene from "../../src/Core/Scene/Scene.js";
     import RenderEngine from "../../src/Core/RenderEngine.js";
     import Node from "../../src/Core/Node/Node.js";
@@ -30,6 +34,7 @@
     import OBJLoader from "../../src/Supp/OBJLoader.js";
     import Material from "../../src/Core/Material/Material.js";
     import MaterialDef from "../../src/Core/Material/MaterialDef.js";
+    import Input from "../../src/Core/InputControl/Input.js";
 
 
     // 创建scene
@@ -46,9 +51,20 @@
 
     let objLoader = new OBJLoader();
     objLoader.setAssetsPath("../../src/Core/Assets/MaterialDef/");
-    objLoader.load(scene, 'grayScene', './../Assets/Models/OBJ/Jingzhuxuan/jinzuxuan.obj', (modelNode)=>{
+    objLoader.load(scene, 'grayScene', './../Assets/Models/OBJ/MainScene/mainScene.obj', (modelNode)=>{
         rootNode.addChildren(modelNode);
-        mainCamera.addFilterFromMaterial(new Material(scene, {id:'grayFilter', materialDef:MaterialDef.load('../../src/Core/Assets/MaterialDef/GrayFilterDef')}));
+        let grayFilter = mainCamera.addFilterFromMaterial(new Material(scene, {id:'grayFilter', materialDef:MaterialDef.load('../../src/Core/Assets/MaterialDef/GrayFilterDef')}));
+        let sceneInput = Input.getInput(scene, {id:scene.getId()});
+        sceneInput.on('keydown', (key)=>{
+            if(key == Input.S_KEY_J){
+                grayFilter.disable();
+            }
+        });
+        sceneInput.on('keydown', (key)=>{
+            if(key == Input.S_KEY_I){
+                grayFilter.enable();
+            }
+        });
     });
 
     let renderEngine = new RenderEngine();
@@ -64,8 +80,6 @@
     document.body.appendChild(stats.domElement);
     scene.on('update', (exTime)=>{
         stats.update();
-        // console.log('eye:' + mainCamera.getEye().toString());
-        // console.log('at:' + mainCamera.getAt().toString());
     });
 </script>
 </body>
