--- a/Example/Renders/DefaultDeferredShadingTest.html
+++ b/Example/Renders/DefaultDeferredShadingTest.html
@@ -9,13 +9,13 @@
     <canvas id="canvas" style="position:absolute;left: 0px;top: 0px;background-color: aliceblue" tabindex="0"></canvas>
 </div>
 <script type="module">
-    import Geometry from "../../src/Core/Node/Geometry.js";
     import Scene from "../../src/Core/Scene/Scene.js";
+    // 由于Geometry会引入Node,Node会引入相互访问Geometry的类,因此我们在Scene引入之后再引入Geometry
+    import Geometry from "../../src/Core/Node/Geometry.js";
     import RenderEngine from "../../src/Core/RenderEngine.js";
     import Node from "../../src/Core/Node/Node.js";
     import Mesh from "../../src/Core/WebGL/Mesh.js";
     import Material from "../../src/Core/Material/Material.js";
-    import ColorMatDef from "../../src/Core/Assets/MaterialDef/ColorMatDef.js";
     import Vector3 from "../../src/Core/Math3d/Vector3.js";
     import MaterialDef from "../../src/Core/Material/MaterialDef.js";
     import FirstPersonController from "../../src/Core/InputControl/FirstPersonController.js";
@@ -23,6 +23,8 @@
     let mainCamera = scene.getComponent('mainCamera');
     mainCamera.lookAt(new Vector3(0, 0, 20), new Vector3(0, 0, 0), new Vector3(0, 1, 0));
     let firstPersonController = new FirstPersonController(scene, {id:'myController'});
+    firstPersonController.setMovementSpeed(50);
+    firstPersonController.setMouseSensitivity(0.2);
     // 加载一个材质定义
     let materialDef = MaterialDef.load("../../src/Core/Assets/MaterialDef/DefaultDeferredShadingTestDef");
 
