--- a/Example/Lights/DynamicPointLightingTest.html
+++ b/Example/Lights/DynamicPointLightingTest.html
@@ -62,7 +62,7 @@
 
 
 
-        let aabb = modelNode.getAABBBoundingBox();
+        let aabb = modelNode.getBoundingVolume();
         let center = new Vector3();
         let min = new Vector3();
         let max = new Vector3();
