--- a/Example/Lights/SinglePassVsMultiPassLightingTest.html
+++ b/Example/Lights/SinglePassVsMultiPassLightingTest.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <title>SinglePassVsMultiPassLightingTest</title>
 </head>
-<body>
+<body onload="focus()">
 <div style="width: 100%;height: 100%;position:fixed;margin: 0px;padding: 0px;left: 0px;top: 0px;">
     <canvas id="canvas" style="padding: 0px;margin: 0px;position:absolute;left: 0px;top: 0px;" tabindex="0"></canvas>
 </div>
+<script src="./../dat.gui.min.js"></script>
 <script type="module">
     // 案例内容
     import Ext from "../Ext.js";
 
     let ext = new Ext();
-    ext.show('  这个案例演示了光源渲染模式SinglePass与MultiPass的区别，默认下，BasicLightingDef使用SinglePass，这个模式下将根据所设置的BatchLightSize，尽可能在一个Pass中完成更多的光照计算，而MultiPass则对光源裁剪以便进行累计光照。');
-
+    ext.show('  这个案例演示了光源渲染模式SinglePass与MultiPass的区别，默认下，BasicLightingDef使用SinglePass，这个模式下将根据所设置的BatchLightSize，尽可能在一个Pass中完成更多的光照计算，而MultiPass则对光源裁剪以便进行累计光照。\n   通过切换，你可以看到SinglePass和MultiPass的差异。', {lineheight:50});
 
     import Scene from "../../src/Core/Scene/Scene.js";
     import RenderEngine from "../../src/Core/RenderEngine.js";
@@ -29,6 +29,8 @@
     import OBJLoader from "../../src/Supp/OBJLoader.js";
     import Stats from "../stats.min.js";
     import SceneBrowsingController from "../../src/Core/InputControl/SceneBrowsingController.js";
+    import DirectionalLight from "../../src/Core/Light/DirectionalLight.js";
+    import Quaternion from "../../src/Core/Math3d/Quaternion.js";
     let scene = new Scene({cavnas:document.getElementById('canvas')});
     // 必须在初始阶段预设batchLightSize值,默认为4
     scene.getRender().setBatchLightSize(4);
@@ -39,127 +41,120 @@
 
     let objLoader = new OBJLoader();
     objLoader.setAssetsPath('../../src/Core/Assets/MaterialDef/');
-    objLoader.load(scene, 'Reaktor_Model', './../Assets/Models/OBJ/Reaktor/reaktor.obj', modelNode=>{
+    objLoader.load(scene, 'Nanosuit', './../Assets/Models/OBJ/Nanosuit/nanosuit.obj', modelNode=>{
         rootNode.addChildren(modelNode);
-        // modelNode.traverse((node)=>{
-        //     if(node.isDrawable()){
-        //         // 选择SinglePass模式的Forward渲染方式
-        //         node.getMaterial().selectTechnology('SinglePass');
-        //     }
-        // });
-        // modelNode.setLocalScaleXYZ(0.1, 0.1, 0.1);
+
         let sceneControl = new SceneBrowsingController(scene, {id:'sceneControl'});
         sceneControl.lookScene(modelNode);
+        sceneControl.setRotationSpeed(0.2);
+        sceneControl.setTargetDistance(20);
+
+        let dirLight = new DirectionalLight(scene, {id:'dirLight'});
+        dirLight.setDirectionXYZ(0, -1, -1);
+        dirLight.setColorRGBA(1.0, 1.0, 1.0, 1.0);
+        rootNode.addChildren(dirLight);
+        let aabb = modelNode.getBoundingVolume();
+        let dx = aabb.getXHalf() * 2;
+        let dy = aabb.getYHalf() * 2;
+        let dz = aabb.getZHalf() * 2;
+        let center = aabb.getCenter();
+        center._m_Y += dy * 0.5;
 
         let pointLights = [
             {
-                pos:[7.7023416, 3.6099787, 7.3349466],
+                pos:new Vector3(center._m_X, center._m_Y, center._m_Z + dz),
+                dir:new Vector3(0, 0, dx),
                 color:[1.0, 0.0, 0.0, 1.0],
-                r:5.0
+                r:25.0
             },
-            // {
-            //     pos:[3.4538236, 3.6099787, 7.3349466],
-            //     color:[0.3, 0.5, 0.0, 1.0],
-            //     r:5.0
-            // },
-            // {
-            //     pos:[0.01142323, 3.6099787, 7.3349466],
-            //     color:[0.3, 0.5, 0.5, 1.0],
-            //     r:5.0
-            // },
-            // {
-            //     pos:[-4.152158, 3.6099787, 7.3349466],
-            //     color:[0.3, 0.0, 0.5, 1.0],
-            //     r:5.0
-            // },
-            // {
-            //     pos:[-8.148325, 3.6099787, 7.3349466],
-            //     color:[0.0, 0.0, 1.0, 1.0],
-            //     r:5.0
-            // },{
-            //     pos:[7.7023416, 3.6099787, 2.3349466],
-            //     color:[0.3, 0.0, 1.0, 1.0],
-            //     r:5.0
-            // },
-            // {
-            //     pos:[3.4538236, 3.6099787, 2.3349466],
-            //     color:[0.0, 0.5, 0.0, 1.0],
-            //     r:5.0
-            // },
-            // {
-            //     pos:[0.01142323, 3.6099787, 2.3349466],
-            //     color:[0.7, 0.5, 0.0, 1.0],
-            //     r:5.0
-            // },
-            // {
-            //     pos:[-4.152158, 3.6099787, 2.3349466],
-            //     color:[0.1, 0.5, 0.0, 1.0],
-            //     r:5.0
-            // },
-            // {
-            //     pos:[-8.148325, 3.6099787, 2.3349466],
-            //     color:[0.5, 0.0, 1.0, 1.0],
-            //     r:5.0
-            // },{
-            //     pos:[7.7023416, 3.6099787, -2.3349466],
-            //     color:[1.0, 0.0, 0.0, 1.0],
-            //     r:5.0
-            // },
-            // {
-            //     pos:[3.4538236, 3.6099787, -2.3349466],
-            //     color:[0.3, 0.5, 0.0, 1.0],
-            //     r:5.0
-            // },
-            // {
-            //     pos:[0.01142323, 3.6099787, -2.3349466],
-            //     color:[0.3, 0.5, 0.5, 1.0],
-            //     r:5.0
-            // },
-            // {
-            //     pos:[-4.152158, 3.6099787, -2.3349466],
-            //     color:[0.3, 0.0, 0.5, 1.0],
-            //     r:5.0
-            // },
-            // {
-            //     pos:[-8.148325, 3.6099787, -2.3349466],
-            //     color:[0.0, 0.0, 1.0, 1.0],
-            //     r:5.0
-            // },{
-            //     pos:[7.7023416, 3.6099787, -7.3349466],
-            //     color:[0.3, 0.0, 1.0, 1.0],
-            //     r:5.0
-            // },
-            // {
-            //     pos:[3.4538236, 3.6099787, -7.3349466],
-            //     color:[0.0, 0.5, 0.0, 1.0],
-            //     r:5.0
-            // },
-            // {
-            //     pos:[0.01142323, 3.6099787, -7.3349466],
-            //     color:[0.7, 0.5, 0.0, 1.0],
-            //     r:5.0
-            // },
-            // {
-            //     pos:[-4.152158, 3.6099787, -7.3349466],
-            //     color:[0.1, 0.5, 0.0, 1.0],
-            //     r:5.0
-            // },
-            // {
-            //     pos:[-8.148325, 3.6099787, -7.3349466],
-            //     color:[0.5, 0.0, 1.0, 1.0],
-            //     r:5.0
-            // },
+            {
+                pos:new Vector3(center._m_X + dx, center._m_Y, center._m_Z),
+                dir:new Vector3(dx, 0, 0),
+                color:[0.3, 0.5, 0.0, 1.0],
+                r:25.0
+            },
+            {
+                pos:new Vector3(center._m_X - dx, center._m_Y, center._m_Z),
+                dir:new Vector3(-dx, 0, 0),
+                color:[0.3, 0.5, 0.5, 1.0],
+                r:25.0
+            },
+            {
+                pos:new Vector3(center._m_X, center._m_Y, center._m_Z - dz),
+                dir:new Vector3(0, 0, -dz),
+                color:[0.0, 0.0, 1.0, 1.0],
+                r:25.0
+            }
         ];
 
         let i = 0;
         console.log('pointLights.lenght:' + pointLights.length);
+        let pLights = [];
         pointLights.forEach(p=>{
             let pointLight = new PointLight(scene, {id:'pointLight' + i++});
             pointLight.setRadius(p.r);
             pointLight.setColorRGBA(p.color[0], p.color[1], p.color[2], p.color[3]);
-            pointLight.setPositionXYZ(p.pos[0], p.pos[1], p.pos[2]);
+            pointLight.setPosition(p.pos);
+            pLights.push(pointLight);
             rootNode.addChildren(pointLight);
         });
+        // 使用dat gui
+        let gui = new dat.GUI();
+        var settings = {
+            render_mode: 'SinglePass',
+            stepClip: 4.0,
+            directionalLight: true,
+            pointLights: true,
+            pointLightRotate: true
+        };
+        let ros = 0;
+        let rotate = new Quaternion();
+        let rotateDir = new Vector3();
+        let nextPos = new Vector3();
+        scene.on('update', (exTime)=>{
+            if(!settings.pointLightRotate)return;
+            // 旋转
+            ros += Math.PI * 0.4 * exTime;
+            for(let i = 0;i < pLights.length;i++){
+                rotate.fromEuler(0, ros, 0);
+                rotate.multVec3(pointLights[i].dir, rotateDir);
+                pLights[i].setPosition(rotateDir.add(pointLights[i].pos, nextPos));
+            }
+        });
+        gui.add(settings, 'render_mode', ['SinglePass', 'MultiPass']).name('渲染模式').onChange(function(value) {
+            modelNode.traverse((node)=>{
+                if(node.isDrawable()){
+                    // SinglePass是默认技术，所以传递""即可
+                    node.getMaterial().selectTechnology(value == 'SinglePass' ? "" : value);
+                }
+            });
+        });
+        gui.add(settings, 'stepClip').name('光锥范围').onChange(stepClip=>{
+            pLights.forEach(p=>{
+                p.setStepClip(stepClip);
+            });
+        });
+        gui.add(settings, 'directionalLight').onChange(swi=>{
+            if(swi){
+                dirLight.enable();
+            }
+            else{
+                dirLight.disable();
+            }
+        });
+        gui.add(settings, 'pointLights').onChange(swi=>{
+            pLights.forEach(p=>{
+                if(swi){
+                    p.enable();
+                }
+                else{
+                    p.disable();
+                }
+            });
+        });
+        gui.add(settings, 'pointLightRotate');
+        gui.width = 300;
+        gui.open();
     });
 
     let renderEngine = new RenderEngine();
