--- a/Example/Renders/DeferredShadingTest.html
+++ b/Example/Renders/DeferredShadingTest.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TestDeferredShading</title>
+    <title>DeferredShadingTest</title>
 </head>
 <body>
 <div style="width: 100%;height: 100%;position:fixed;left: 0px;top: 0px;">
